# hakai-bottle-tool

./: .gitignore  CODEOWNERS  Complete_variable_list.csv  HAKAI_QUADRA_QU39_20190205_180617UTC_EventPk466112.nc  Hakai_bottle_files_variables.csv  MANIFEST.in  README.md  bottle_netcdf_attributes.json  create_bottle_file.py  generate_bottle.py  pyproject.toml  run_bottle_file.py  run_hakai_bottle_tool.ipynb  setup.py
.github/workflows/: test_install_and_pytest.yaml
create_bottle_file/: __init__.py  erddap_output.py  hakai.py  transform.py
hakai_bottle_tool/: __init__.py  __main__.py  endpoints.py  hakai_bottle_tool.py
hakai_bottle_tool/config/: Complete_variable_list.csv  Reduced_variable_list.csv  bottle_netcdf_attributes.json
tests/: test_bottle_tool.py
