[tool.poetry]
name = "hakai-bottle-tool"
version = "0.2.0"
description = "Method use to combine Hakai sample data to CTD profile data."
authors = ["Jessy Barrette <30420025+JessyBarrette@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "hakai_bottle_tool", from = "." },
]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"
hakai-api = "^1.5.1"
plotly = "^5.22.0"
xarray = "^2024.5.0"
netCDF4 = "^1.6.5"
ipykernel = "^6.29.4"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
